added scroll reveal

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,7 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
