fix bubbles and scroll reveal

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -10,7 +10,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 // custom bootstrap vars
